# newsletter

./: .gitignore  Cargo.toml  Dockerfile  sqlx-data.json
.github/workflows/: liara.yaml
configuration/: production.yaml
migrations/: 20230404230131_create_subscriptions_table.sql
scripts/: init_db.sh
src/lib/: configuration.rs  mod.rs  startup.rs  telemetry.rs
src/lib/routes/: subscriptions.rs
tests/: health_check.rs
