[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib/mod.rs"

[[bin]]
path = "src/bin/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1.3.1", features = ["v4"] }
chrono = "0.4.24"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
log = "0.4.17"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.4"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]

[dev-dependencies]
reqwest = "0.11.16"
once_cell = "1.17.1"
